founddocuments controllers.routes and swagger documntation
